002-service.yaml
---
# Source: prometheus/templates/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
    chart: prometheus-4.5.0
    component: "server"
    heritage: Tiller
    release: RELEASE-NAME
  name: RELEASE-NAME-prometheus-server
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9090
  selector:
    app: prometheus
    component: "server"
    release: RELEASE-NAME
  type: "ClusterIP"
