008-ksm.yaml
---
# Source: prometheus/templates/kube-state-metrics-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: prometheus
    chart: prometheus-4.5.0
    component: "kube-state-metrics"
    heritage: Tiller
    release: RELEASE-NAME
  name: RELEASE-NAME-prometheus-kube-state-metrics
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: prometheus
        component: "kube-state-metrics"
        release: RELEASE-NAME
    spec:
      serviceAccountName: RELEASE-NAME-prometheus-kube-state-metrics
      containers:
        - name: prometheus-kube-state-metrics
          image: "gcr.io/google_containers/kube-state-metrics:v0.4.1"
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: metrics
              containerPort: 8080
          resources:
            {}

---
# Source: prometheus/templates/kube-state-metrics-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"

  labels:
    app: prometheus
    chart: prometheus-4.5.0
    component: "kube-state-metrics"
    heritage: Tiller
    release: RELEASE-NAME
  name: RELEASE-NAME-prometheus-kube-state-metrics
spec:
  clusterIP: None
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: prometheus
    component: "kube-state-metrics"
    release: RELEASE-NAME
  type: "ClusterIP"
