009-node-exporter.yaml
---
# Source: prometheus/templates/node-exporter-daemonset.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  labels:
    app: prometheus
    chart: prometheus-4.5.0
    component: "node-exporter"
    heritage: Tiller
    release: RELEASE-NAME
  name: RELEASE-NAME-prometheus-node-exporter
spec:
  template:
    metadata:
      labels:
        app: prometheus
        component: "node-exporter"
        release: RELEASE-NAME
    spec:
      serviceAccountName: RELEASE-NAME-prometheus-node-exporter
      containers:
        - name: prometheus-node-exporter
          image: "prom/node-exporter:v0.14.0"
          imagePullPolicy: "IfNotPresent"
          args:
            - --collector.procfs=/host/proc
            - --collector.sysfs=/host/sys
          ports:
            - name: metrics
              containerPort: 9100
              hostPort: 9100
          resources:
            {}

          volumeMounts:
            - name: proc
              mountPath: /host/proc
              readOnly:  true
            - name: sys
              mountPath: /host/sys
              readOnly: true
      hostNetwork: true
      hostPID: true
      volumes:
        - name: proc
          hostPath:
            path: /proc
        - name: sys
          hostPath:
            path: /sys

---
# Source: prometheus/templates/node-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"

  labels:
    app: prometheus
    chart: prometheus-4.5.0
    component: "node-exporter"
    heritage: Tiller
    release: RELEASE-NAME
  name: RELEASE-NAME-prometheus-node-exporter
spec:
  clusterIP: None
  ports:
    - name: metrics
      port: 9100
      protocol: TCP
      targetPort: 9100
  selector:
    app: prometheus
    component: "node-exporter"
    release: RELEASE-NAME
  type: "ClusterIP"
