010-pushgateway.yaml
---
# Source: prometheus/templates/pushgateway-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: prometheus
    chart: prometheus-4.5.0
    component: "pushgateway"
    heritage: Tiller
    release: RELEASE-NAME
  name: RELEASE-NAME-prometheus-pushgateway
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: prometheus
        component: "pushgateway"
        release: RELEASE-NAME
    spec:
      containers:
        - name: prometheus-pushgateway
          image: "prom/pushgateway:v0.4.0"
          imagePullPolicy: "IfNotPresent"
          args:
          ports:
            - containerPort: 9091
          readinessProbe:
            httpGet:
              path: /#/status
              port: 9091
            initialDelaySeconds: 10
            timeoutSeconds: 10
          resources:
            {}

---
# Source: prometheus/templates/pushgateway-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: prometheus
    chart: prometheus-4.5.0
    component: "pushgateway"
    heritage: Tiller
    release: RELEASE-NAME
  name: RELEASE-NAME-prometheus-pushgateway
spec:
  rules:
    - host: pushgateway.minikube.info
      http:
        paths:
          - backend:
              serviceName: RELEASE-NAME-prometheus-pushgateway
              servicePort: 9091

---
# Source: prometheus/templates/pushgateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/probe: pushgateway

  labels:
    app: prometheus
    chart: prometheus-4.5.0
    component: "pushgateway"
    heritage: Tiller
    release: RELEASE-NAME
  name: RELEASE-NAME-prometheus-pushgateway
spec:
  ports:
    - name: http
      port: 9091
      protocol: TCP
      targetPort: 9091
  selector:
    app: prometheus
    component: "pushgateway"
    release: RELEASE-NAME
  type: "ClusterIP"
